implement TreeResource.java